--- a/src/app/UserComponents/support/support.component.html
+++ b/src/app/UserComponents/support/support.component.html
@@ -1,4 +1,4 @@
-<div class="relative h-[100vh] bg-[#A5CBE9]">
+<div class="relative h-[83vh] bg-[#A5CBE9]">
   <div class="relative z-10 flex flex-col lg:flex-row items-start justify-center p-6 gap-12 max-w-7xl mx-auto">
     
     <!-- Contact Info -->
@@ -31,7 +31,7 @@
           <h3 class="text-xl font-bold  text-slate-800">Call</h3>
         </div>
         <p class=" text-slate-800 text-center">between 10 AM and 8 PM</p>
-        <p class=" text-slate-800 font-medium">+91 9876543210</p>
+        <p class=" text-slate-800 font-medium"><a href="">+91 9876543210</a></p>
       </div>
     </div>
 
