--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,11 +28,12 @@ input[type="number"]::-webkit-inner-spin-button {
 *::-webkit-scrollbar-thumb:hover {
     background-color: #555;
 }
+
 .p-toast {
     width: auto !important;
     max-width: 95vw;
 }
 
-// .p-toast .p-toast-message .p-toast-icon-close {
-//     margin: auto !important;
-// }
+.p-toast .p-toast-message .p-toast-icon-close {
+    margin: auto !important;
+}
