--- a/src/app/UserComponents/dashboard/dashboard.component.html
+++ b/src/app/UserComponents/dashboard/dashboard.component.html
@@ -68,22 +68,25 @@
               Search
             </button>
           </div>
-          <div class="w-full p-4 bg-gray-50 rounded-xl shadow-md" *ngIf="!subDomainList.length">
+          <div class="w-full p-4 bg-gray-50 rounded-xl shadow-md" *ngIf="subDomainData">
             <h1 class="text-md font-bold text-gray-900 mb-3">
               Your Search Domain List
             </h1>
             <div class="overflow-y-auto pr-2 custom-scrollbar" style="max-height: 250px">
               <!-- Card with form -->
-              <div *ngFor="let subdomain of subDomainList"
+              <div
                 class="flex flex-col md:flex-row items-center gap-3 w-full bg-white border border-gray-200 rounded-lg px-4 py-4 shadow-sm hover:shadow-md transition">
                 <div class="flex-1">
                   <h2 class="text-sm text-green-700 font-semibold">
-                    {{ subdomain.name }}
+                    {{ subDomainName + domainAddress}}
                   </h2>
                   <div class="flex items-center gap-2 mt-1">
                     <i class="fa-solid fa-certificate text-yellow-500"></i>
-                    <span class="text-xs text-gray-700">
-                      {{ subdomain.message }}
+                    <span class="text-xs text-gray-700" [ngClass]="{
+                      'text-red-600' : !subDomainData.data.subdomainAvailability ,
+                      'text-green-700' : subDomainData.data.subdomainAvailability,
+                    }">
+                      {{ subDomainData.message }}
                     </span>
                   </div>
                 </div>
@@ -92,27 +95,31 @@
                   class="px-3 py-2 text-black border border-gray-300 rounded focus:outline-none focus:ring-1 focus:ring-blue-400 text-sm w-full md:w-64" />
 
                 <select
-                  class="px-3 py-2 border border-gray-300 rounded bg-white text-black text-sm focus:outline-none focus:ring-1 focus:ring-blue-400">
-                  <option *ngFor="let plan of subdomain.plans" [value]="plan.value">
-                    {{ plan.name }}
+                  class="px-3 py-2 border border-gray-300 rounded bg-white text-black text-sm focus:outline-none focus:ring-1 focus:ring-blue-400"
+                  (change)="planDetailFind($event)">
+                  <option value="null" selected>
+                    Plans
+                  </option>
+                  <option *ngFor="let plan of subDomainData.data.planNameList" [value]="plan._id">
+                    {{ plan.planName }}
                   </option>
                 </select>
 
                 <button
                   class="px-4 py-2 bg-blue-600 text-white font-medium rounded hover:bg-blue-700 transition w-full md:w-auto">
-                  Search
+                  Create Tunnel
                 </button>
               </div>
 
               <!-- Transaction info row -->
-              <div
+              <div *ngIf="planDetails"
                 class="w-full flex flex-col md:flex-row border border-t-0 border-gray-300 rounded-b-lg mt-2 py-3 justify-between px-6 text-sm text-gray-700 bg-gray-50">
                 <div class="flex items-center gap-2">
                   <span class="font-medium">
                     Date:
                   </span>
                   <span>
-                    01/03/1999
+                    {{planDetails.purchaseDate | date}}
                   </span>
                 </div>
                 <div class="flex items-center gap-2">
@@ -120,7 +127,7 @@
                     Amount:
                   </span>
                   <span>
-                    ₹12,000
+                    ₹{{planDetails.amount}}
                   </span>
                 </div>
                 <div class="flex items-center gap-2">
@@ -128,7 +135,7 @@
                     Transaction ID:
                   </span>
                   <span>
-                    941424353154
+                    {{planDetails.transactionId}}
                   </span>
                 </div>
               </div>
@@ -263,11 +270,8 @@
         <div class="bg-white border border-gray-200 rounded-xl overflow-hidden shadow hover:shadow-lg transition">
           <!-- Thumbnail Section -->
           <div class="relative h-48 w-full overflow-hidden">
-            <img
-              src="assets/images/localtoglobal_GB.jpg"
-              alt="localtoglobal - Local to Internet"
-              class="object-cover h-full w-full transform hover:scale-105 transition duration-300"
-            />
+            <img src="assets/images/FIXEDIP_GB.jpg" alt="localtoglobal - Local to Internet"
+              class="object-cover h-full w-full transform hover:scale-105 transition duration-300" />
             <!-- Play Icon Overlay -->
             <div class="absolute inset-0 bg-black/30 flex items-center justify-center transition hover:bg-black/40">
               <div
@@ -292,14 +296,9 @@
         <!-- Card 2 -->
         <div class="bg-white border border-gray-200 rounded-xl overflow-hidden shadow hover:shadow-lg transition">
           <div class="relative h-48 w-full overflow-hidden">
-            <img
-              src="assets/images/localtoglobal_GB.jpg"
-              alt="localtoglobal - Domain Registration"
-              class="object-cover h-full w-full transform hover:scale-105 transition duration-300"
-            />
-            <div
-              class="absolute inset-0 bg-black/30 flex items-center justify-center transition hover:bg-black/40"
-            >
+            <img src="assets/images/FIXEDIP_GB.jpg" alt="localtoglobal - Domain Registration"
+              class="object-cover h-full w-full transform hover:scale-105 transition duration-300" />
+            <div class="absolute inset-0 bg-black/30 flex items-center justify-center transition hover:bg-black/40">
               <div
                 class="w-16 h-16 bg-[#77B3E3] rounded-full flex items-center justify-center shadow-lg hover:scale-110 transition">
                 <svg viewBox="0 0 24 24" fill="white" class="w-10 h-10">
@@ -321,14 +320,9 @@
         <!-- Card 3 -->
         <div class="bg-white border border-gray-200 rounded-xl overflow-hidden shadow hover:shadow-lg transition">
           <div class="relative h-48 w-full overflow-hidden">
-            <img
-              src="assets/images/localtoglobal_GB.jpg"
-              alt="localtoglobal - Installation"
-              class="object-cover h-full w-full transform hover:scale-105 transition duration-300"
-            />
-            <div
-              class="absolute inset-0 bg-black/30 flex items-center justify-center transition hover:bg-black/40"
-            >
+            <img src="assets/images/FIXEDIP_GB.jpg" alt="localtoglobal - Installation"
+              class="object-cover h-full w-full transform hover:scale-105 transition duration-300" />
+            <div class="absolute inset-0 bg-black/30 flex items-center justify-center transition hover:bg-black/40">
               <div
                 class="w-16 h-16 bg-[#77B3E3] rounded-full flex items-center justify-center shadow-lg hover:scale-110 transition">
                 <svg viewBox="0 0 24 24" fill="white" class="w-10 h-10">
