--- a/src/app/GuestComponents/home/home.component.html
+++ b/src/app/GuestComponents/home/home.component.html
@@ -12,7 +12,7 @@
         <span class="text-blue-600 font-semibold">localhost server</span> through any NAT or firewall.
       </p>
       <div class="flex gap-4">
-        <button
+        <button [routerLink]="['/signup']"
           class="px-8 py-3 bg-blue-600 text-white rounded-lg font-medium hover:bg-blue-700 transition transform hover:scale-105 shadow-lg">
           START NOW
         </button>
